#add_subdirectory(aointegrals)
#add_subdirectory(backtrans)
#add_subdirectory(mointegrals)
#add_subdirectory(mollerplesset2)
#add_subdirectory(sointegrals)
add_subdirectory(skeleton)
#if (ENABLE_AMBIT)
#add_subdirectory(skeletonambit)
#endif()
add_subdirectory(skeletonaointegrals)
add_subdirectory(skeletondfmp2)
add_subdirectory(skeletonmointegrals)
add_subdirectory(skeletonscf)
add_subdirectory(skeletonsointegrals)
add_subdirectory(skeletonwavefunction)
